[gd_scene load_steps=15 format=3 uid="uid://otcgpkk2fmoa"]

[ext_resource type="Theme" uid="uid://bq1adksf2s5pe" path="res://resources/new_theme.tres" id="1_fom6h"]
[ext_resource type="Script" uid="uid://cotjre5sd7ypx" path="res://godzic_music_player.gd" id="1_v5qbh"]

[sub_resource type="Animation" id="Animation_p1s4w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../CanvasLayer/UI/History:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1152, 0)]
}

[sub_resource type="Animation" id="Animation_fdtgy"]
resource_name = "close"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../CanvasLayer/UI/History:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-896, 0), Vector2(-1152, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../CanvasLayer/UI/Playlist")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"show"
}]
}

[sub_resource type="Animation" id="Animation_v5qbh"]
resource_name = "open"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../CanvasLayer/UI/History:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-1152, 0), Vector2(-896, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../CanvasLayer/UI/Playlist")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hide"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p1s4w"]
_data = {
&"RESET": SubResource("Animation_p1s4w"),
&"close": SubResource("Animation_fdtgy"),
&"open": SubResource("Animation_v5qbh")
}

[sub_resource type="Animation" id="Animation_ivhir"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../CanvasLayer/UI/PlayUIHandler:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_2brfj"]
resource_name = "contract"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../CanvasLayer/UI/PlayUIHandler:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.222]
}

[sub_resource type="Animation" id="Animation_dslsw"]
resource_name = "expand"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../CanvasLayer/UI/PlayUIHandler:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.222, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ivhir"]
_data = {
&"RESET": SubResource("Animation_ivhir"),
&"contract": SubResource("Animation_2brfj"),
&"expand": SubResource("Animation_dslsw")
}

[sub_resource type="Animation" id="Animation_rtq3g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../CanvasLayer/UI/Playlist:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1152, 0)]
}

[sub_resource type="Animation" id="Animation_unn1i"]
resource_name = "close"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../CanvasLayer/UI/Playlist:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-896, 0), Vector2(-1152, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../CanvasLayer/UI/History")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"show"
}]
}

[sub_resource type="Animation" id="Animation_0lm2q"]
resource_name = "open"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../CanvasLayer/UI/Playlist:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-1152, 0), Vector2(-896, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../CanvasLayer/UI/History")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hide"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rtq3g"]
_data = {
&"RESET": SubResource("Animation_rtq3g"),
&"close": SubResource("Animation_unn1i"),
&"open": SubResource("Animation_0lm2q")
}

[node name="GodzicMusicPlayer" type="Node2D"]
script = ExtResource("1_v5qbh")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_fom6h")

[node name="BrowseButton" type="Button" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.902778
anchor_top = 0.0246914
anchor_right = 0.981771
anchor_bottom = 0.0756173
text = "BROWSE"
metadata/_edit_use_anchors_ = true

[node name="CreditsButton" type="Button" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.902778
anchor_top = 0.197531
anchor_right = 0.981771
anchor_bottom = 0.268519
offset_bottom = -13.0
text = "VIEW
CREDITS"
metadata/_edit_use_anchors_ = true

[node name="PlayUIHandler" type="Control" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="SeekBar" type="HSlider" parent="CanvasLayer/UI/PlayUIHandler"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.152778
anchor_top = 0.864198
anchor_right = 0.888889
anchor_bottom = 0.888889
grow_horizontal = 2
grow_vertical = 0
step = 0.0
metadata/_edit_use_anchors_ = true

[node name="VolumeButton" type="Button" parent="CanvasLayer/UI/PlayUIHandler"]
layout_mode = 0
anchor_left = 0.902778
anchor_top = 0.856481
anchor_right = 0.962674
anchor_bottom = 0.898148
text = "VOLUME"
metadata/_edit_use_anchors_ = true

[node name="VolumeSlider" type="VSlider" parent="CanvasLayer/UI/PlayUIHandler"]
unique_name_in_owner = true
visible = false
layout_mode = 0
anchor_left = 0.923611
anchor_top = 0.54321
anchor_right = 0.9375
anchor_bottom = 0.824074
offset_top = 3.05176e-05
min_value = -20.0
max_value = 5.0
step = 0.0
metadata/_edit_use_anchors_ = true

[node name="PlayButton" type="Button" parent="CanvasLayer/UI/PlayUIHandler"]
unique_name_in_owner = true
layout_mode = 0
anchor_left = 0.0512153
anchor_top = 0.858025
anchor_right = 0.0894097
anchor_bottom = 0.899691
text = "PLAY"
metadata/_edit_use_anchors_ = true

[node name="Credits" type="RichTextLabel" parent="CanvasLayer/UI/PlayUIHandler"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.159722
anchor_top = 0.197531
anchor_right = 0.840278
anchor_bottom = 0.493827
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "Godzic Music Player uses Godot version 4.4 Beta 2.

Godzic Music Player was created by Abdul Hannan Ahmed as a solo hobbyist project. All thanks to GDQuest Team at [url=\"https://gdquest.com\"]GDQuest[/url] for their paid courses, that enabled me to gain knowledge, become an independent Godot programmer and make this Music Player on my own. In GDQuest paid courses, not only your learn how to make games using Godot 4 and GDScript, but they also teach you with interactive exercises, challenges, and tips & tricks on how to become an independent game programmer, thinking and creating your own game mechanics without the need for step-by-step tutorials. You can see their courses at [url=\"https://school.gdquest.com\"]GDQuest School[/url].

Thank you, GDQuest! Without your paid courses, I wouldn't be where I am today, making my own stuff with Godot for fun in such a short time. I hope this project showcases what Godot is capable of doing, and how getting started with the right people, with the best teachers can help you get started and improve as you move on...

[b][u]ABOUT ME[/u][/b]: I am Abdul Hannan Ahmed, a 17 year old, born on 7th of February, 2008. I started my Game Development journey with Unity in November, 2023, but I switched over to Godot in February, 2024. I bought the [url=\"https://gdquest.com\"]GDQuest[/url] paid courses and started my Godot 4 GameDev Journey. From knowing very very little about knowing Godot and GDScript, to less than an year, the paid courses took me to creating my own Music Player (Godzic) in Godot 4, all thanks to the wonderful at GDQuest, especially Jad and Nathan!"
metadata/_edit_use_anchors_ = true

[node name="History" type="Control" parent="CanvasLayer/UI"]
layout_mode = 1
anchor_left = -1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="HistoryButton" type="Button" parent="CanvasLayer/UI/History"]
layout_mode = 0
offset_left = 1160.0
offset_top = 8.0
offset_right = 1230.0
offset_bottom = 35.0
text = "HISTORY"

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/UI/History"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101961, 0.101961, 0.101961, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/UI/History"]
layout_mode = 0
offset_left = 904.0
offset_top = 16.0
offset_right = 1136.0
offset_bottom = 632.0

[node name="HistoryContainer" type="VBoxContainer" parent="CanvasLayer/UI/History/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="VSeparator" type="VSeparator" parent="CanvasLayer/UI/History/ScrollContainer/HistoryContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Playlist" type="Control" parent="CanvasLayer/UI"]
layout_mode = 1
anchor_left = -0.777778
anchor_right = 0.222222
anchor_bottom = 1.0
offset_left = -256.0
offset_right = -256.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="PlaylistButton" type="Button" parent="CanvasLayer/UI/Playlist"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.00694
anchor_top = 0.111111
anchor_right = 1.06771
anchor_bottom = 0.152778
text = "PLAYLIST"
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/UI/Playlist"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101961, 0.101961, 0.101961, 1)

[node name="AddToPlaylistButton" type="Button" parent="CanvasLayer/UI/Playlist"]
layout_mode = 0
anchor_left = 0.784722
anchor_top = 0.0123457
anchor_right = 0.875
anchor_bottom = 0.095679
offset_right = -31.0004
offset_bottom = -8.00004
text = "ADD STUFF
TO PLAYLIST"
metadata/_edit_use_anchors_ = true

[node name="RenamePlaylistButton" type="Button" parent="CanvasLayer/UI/Playlist"]
layout_mode = 0
anchor_left = 0.888889
anchor_top = 0.0123457
anchor_right = 0.97309
anchor_bottom = 0.095679
offset_bottom = -8.00004
text = "RENAME
PLAYLIST"
metadata/_edit_use_anchors_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/UI/Playlist"]
layout_mode = 0
offset_left = 904.0
offset_top = 128.0
offset_right = 1136.0
offset_bottom = 512.0

[node name="PlaylistContainer" type="VBoxContainer" parent="CanvasLayer/UI/Playlist/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="VSeparator" type="VSeparator" parent="CanvasLayer/UI/Playlist/ScrollContainer/PlaylistContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="PlaylistName" type="Label" parent="CanvasLayer/UI/Playlist"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.791667
anchor_top = 0.135802
anchor_right = 0.986111
anchor_bottom = 0.185185
text = "MY PLAYLIST"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="PlaylistEdit" type="LineEdit" parent="CanvasLayer/UI/Playlist"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 912.0
offset_top = 88.0
offset_right = 1136.0
offset_bottom = 115.0
max_length = 30
clear_button_enabled = true

[node name="LoopCurrentSongCheck" type="CheckButton" parent="CanvasLayer/UI/Playlist"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.784722
anchor_top = 0.802469
anchor_right = 0.890625
anchor_bottom = 0.921296
offset_right = -0.999756
offset_bottom = -11.9998
text = "LOOP
CURRENT
SONG"
metadata/_edit_use_anchors_ = true

[node name="LoopPlaylistCheck" type="CheckButton" parent="CanvasLayer/UI/Playlist"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.895833
anchor_top = 0.814815
anchor_right = 0.998264
anchor_bottom = 0.898148
offset_right = -0.99939
offset_bottom = -7.99982
text = "LOOP
PLAYLIST"
metadata/_edit_use_anchors_ = true

[node name="RandomizeSongsCheck" type="CheckButton" parent="CanvasLayer/UI/Playlist"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.784722
anchor_top = 0.901235
anchor_right = 0.909722
anchor_bottom = 0.984568
offset_right = -5.99963
offset_bottom = -7.99976
disabled = true
text = "RANDOMIZE
SONGS"
metadata/_edit_use_anchors_ = true

[node name="MusicFileDialog" type="FileDialog" parent="CanvasLayer/UI"]
auto_translate_mode = 1
title = "Open a File"
position = Vector2i(64, 36)
transient_to_focused = true
exclusive = false
popup_window = true
theme = ExtResource("1_fom6h")
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.mp3, *.ogg, *.wav; Audio Files")

[node name="PlaylistFileDialog" type="FileDialog" parent="CanvasLayer/UI"]
auto_translate_mode = 1
title = "Open File(s)"
position = Vector2i(260, 50)
size = Vector2i(536, 360)
ok_button_text = "Open"
file_mode = 1
access = 2
filters = PackedStringArray("*.mp3, *.ogg, *.wav; Audio Files")

[node name="FileDialogues" type="Node" parent="."]

[node name="MusicFileDialog" type="FileDialog" parent="FileDialogues"]
unique_name_in_owner = true
title = "Open a File"
position = Vector2i(64, 36)
transient_to_focused = true
exclusive = false
popup_window = true
theme = ExtResource("1_fom6h")
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.mp3, *.ogg, *.wav; Audio Files")

[node name="PlaylistFileDialog" type="FileDialog" parent="FileDialogues"]
unique_name_in_owner = true
title = "Open File(s)"
position = Vector2i(260, 50)
size = Vector2i(536, 360)
theme = ExtResource("1_fom6h")
ok_button_text = "Open"
file_mode = 1
access = 2

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true

[node name="SeekTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="AnimationPlayers" type="Node" parent="."]

[node name="HistoryAnimations" type="AnimationPlayer" parent="AnimationPlayers"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_p1s4w")
}

[node name="PlayUIHandlerAnimations" type="AnimationPlayer" parent="AnimationPlayers"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_ivhir")
}

[node name="PlaylistAnimations" type="AnimationPlayer" parent="AnimationPlayers"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_rtq3g")
}

[connection signal="pressed" from="CanvasLayer/UI/BrowseButton" to="." method="_on_browse_button_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/UI/PlayUIHandler/SeekBar" to="." method="_on_seek_bar_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/UI/PlayUIHandler/SeekBar" to="." method="_on_seek_bar_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/UI/PlayUIHandler/VolumeButton" to="." method="_on_volume_button_pressed"]
[connection signal="value_changed" from="CanvasLayer/UI/PlayUIHandler/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="pressed" from="CanvasLayer/UI/PlayUIHandler/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="meta_clicked" from="CanvasLayer/UI/PlayUIHandler/Credits" to="." method="_on_credits_meta_clicked"]
[connection signal="pressed" from="CanvasLayer/UI/History/HistoryButton" to="." method="_on_history_button_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/Playlist/PlaylistButton" to="." method="_on_playlist_button_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/Playlist/AddToPlaylistButton" to="." method="_on_add_to_playlist_button_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/Playlist/RenamePlaylistButton" to="." method="_on_rename_playlist_button_pressed"]
[connection signal="text_submitted" from="CanvasLayer/UI/Playlist/PlaylistEdit" to="." method="_on_playlist_edit_text_submitted"]
[connection signal="pressed" from="CanvasLayer/UI/Playlist/LoopCurrentSongCheck" to="." method="_on_loop_current_song_check_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/Playlist/LoopPlaylistCheck" to="." method="_on_loop_playlist_check_pressed"]
[connection signal="file_selected" from="CanvasLayer/UI/MusicFileDialog" to="." method="_on_music_file_dialog_file_selected"]
[connection signal="files_selected" from="CanvasLayer/UI/PlaylistFileDialog" to="." method="_on_playlist_file_dialog_files_selected"]
[connection signal="file_selected" from="FileDialogues/MusicFileDialog" to="." method="_on_music_file_dialog_file_selected"]
[connection signal="files_selected" from="FileDialogues/PlaylistFileDialog" to="." method="_on_playlist_file_dialog_files_selected"]
[connection signal="finished" from="AudioPlayer" to="." method="_on_audio_player_finished"]
